# chat_app

./: .gitignore
backend/: Cargo.toml
backend/src/: lib.rs  main.rs  message.rs
chat_backend/: Cargo.toml
chat_backend/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs  message.rs  part.rs  user.rs
