[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.11.0"
futures = "0.3.21"
crossterm = { version = "0.19", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared" }
uuid = { version = "1.0.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
